@@ -7,6 +7,8 @@ TODO: revisit 59.x timer in the light of mdoenr powersaving
           io_asubmit also retursn EINTR.
         - cleanup: replace expect_true/false and noinline by their
           libecb counterparts.
+        - move syscall infrastructure from ev_linuxaio.c to ev.c.
+        - prepare io_uring integration.
 
 4.27 Thu Jun 27 22:43:44 CEST 2019
 	- linux aio backend almost completely rewritten to work around its
